# cortex

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
cortex_inputs/: C_programming_language.txt  quantum_physics.txt  rust_comments.txt  rust_control_flow.txt  rust_data_types.txt  rust_functions.txt  rust_hellocargo.txt  rust_helloworld.txt  rust_programming_a_guessing_game.txt  rust_programming_language.txt  rust_references_and_borrowing.txt  rust_the_slice_type.txt  rust_understanding_ownership.txt  rust_what_is_ownership.txt  variables_and_mutability.txt  youtubewiki.txt
cortex_storage/: borrowing_lobe.json  c_programming_language_lobe.json  cargo_lobe.json  comments_lobe.json  control_flow_lobe.json  core_language_lobe.json  data_types_lobe.json  functions_lobe.json  general_lobe.json  guessing_game_lobe.json  hello_world_lobe.json  ingested_files.json  quantum_lobe.json  rust_lobe.json  slices_lobe.json  variables_and_mutability_lobe.json  vm_10_hafta_lobe.json  vm_2_hafta_lobe.json  vm_3_hafta_lobe.json  vm_4_5_hafta_weka_ek_sunum_lobe.json  vm_4_hafta_lobe.json  vm_5_hafta_lobe.json  vm_6_hafta_lobe.json  vm_7_hafta_lobe.json  youtubewiki_lobe.json
src/: cortex_graph.rs  dream_cycle.rs  glial_system.rs  ingestion.rs  main.rs  morphology.rs  pdf_ingestor.rs  synthesizer.rs  thalamus_router.rs  wiki_parser.rs
